<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   tools:context=".OrderFragment" android:id="@+id/orderLayout">
    <Button
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/applePlus"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginStart="10dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/orangePlus" app:layout_constraintEnd_toStartOf="@+id/appleCount"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appleMinus" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/appleCount"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/orangeMinus"/>
    <Button
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orangePlus" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/applePlus" app:layout_constraintEnd_toStartOf="@+id/orangeCount"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/order"/>
    <Button
            android:text="@string/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orangeMinus" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/appleMinus"
            app:layout_constraintStart_toEndOf="@+id/orangeCount" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/order"/>
    <TextView
            android:text="@string/apple_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/applePlus"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"/>
    <TextView
            android:text="@string/orange_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintEnd_toStartOf="@+id/orangePlus"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toTopOf="@+id/order"/>
    <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appleCount" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/applePlus"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/appleMinus"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/orangeCount"/>
    <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orangeCount" app:layout_constraintEnd_toStartOf="@+id/orangeMinus"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/appleCount" app:layout_constraintStart_toEndOf="@+id/orangePlus"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/order" android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/purchase_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/order" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orangePlus" app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintBottom_toTopOf="@+id/wallet"/>
    <TextView
            android:text="@string/wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wallet"
            app:layout_constraintTop_toBottomOf="@+id/order"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>